--- a/assets/css/folha-de-estilo-do-twice-app.css
+++ b/assets/css/folha-de-estilo-do-twice-app.css
@@ -13,30 +13,43 @@ html,body{
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+/*Declarando as fontes externas que serão utilizadas*/
+@font-face {
+    font-family: "Formula of Love";
+    src: url(../fontes/TWICE\ -\ Formula\ of\ Love\ 3.ttf);
+}
 /*MENU TWICE APP*/
 /*Aplicando o design do menu*/
-.containerMenu{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-}
 .menu{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 80%;
+    width: 90%;
     height: 3em;
     margin: 3px 0;
     align-items: center;
     border-radius: 80px;
     background-color: #fafafa;
 }
+.logo{
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 10px;
+    margin-right: 50px;
+    width: 30px;
+    height: 30px;
+    color:#7adbd4;
+}
+.textoDaLogo{
+    padding: 0 5px;
+    align-self: center;
+    font-family: 'Secular One', sans-serif;
+    color: #6791DB;
+    font-size: 20px;
+}
 .temas{
-    width: 13%;
-    color: black;
-    margin: 0 10px;
-    background-color: rgba(0, 0, 0, 0.226);
-    border: 3px solid #6791DB;
+    width: auto;
+    height: 40px;
 }
 .temas ul{
     list-style:none;
@@ -73,79 +86,16 @@ html,body{
 .vermelho{background-color: #C70024;}
 .rosa{background-color: #FF8FBE;}
 .laranja{background-color: #FFD492;}
-.configuracoes{
-    background-color: #e4e1e1;
+.modo{
+    /*background-color: #e4e1e1;*/
     margin-right: 10px; 
-    padding: 7px; 
+    padding: 5px; 
     border: 1px solid #6791DB; 
-    border-radius: 30px;
+    border-radius: 50%;
 }
-.configuracoes:hover{
-    background-color: rgba(0, 0, 0, 0.226);
-    border: 2px solid #6791DB;
+.modo:hover, .menuDeNavegacao ul li a:hover{
+    background-color: rgba(0, 0, 0, 0.11);
     transition: 0.2s;
-}
-.bemvindo{
-    margin-top: 13%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.containerLogo{
-    display: flex;
-    justify-content: flex-start;
-    width: auto;
-    height: 1.7em;
-    margin-left: 10px;
-}
-.logo{
-    width: 30px;
-    height: 30px;
-    color:#7adbd4;
-}
-.textoDa{
-    padding: 0 5px;
-    align-self: center;
-    font-family: 'Secular One', sans-serif;
-    color: #6791DB;
-}
-.Logo1{
-    font-size: 20px;
-}
-.Logo2{
-    font-size: 40px;
-}
-.títuloDaPagina{
-    display: flex;
-    justify-content: center;
-    color: #7adbd4;
-}
-.linkMenu a{
-    margin: 0;
-    padding: 12px 16px;
-    text-decoration: none;
-    color: grey;
-}
-.linkMenu a:hover{
-    background-color: #6791DB;
-    color: #fafafa;
-    transition: 0.5s; 
-}
-.perfil{
-    display: flex;
-    justify-content: flex-end;
-    width: auto;
-    color: #7adbd4;
-    margin-right: 10px;
-}
-.perfil img{
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
-}
-.user{
-    padding: 0 15px;
-    align-self: center;
 }
 .menus{
     width: 100%;
@@ -154,7 +104,57 @@ html,body{
     flex-direction: column;
     align-items: center;
 }
-
+.menuDeNavegacao{
+    display: flex;
+    margin: 10px 0;
+    width: 500px;
+    font-family: 'Secular One', sans-serif;
+}
+.menuDeNavegacao ul{
+    display: flex;
+    background-color: #6791DB;
+    height: 45px;
+    width: 100%;
+    justify-content:center;
+    flex-wrap: wrap;
+    border-radius: 40px;
+}
+.menuDeNavegacao ul li{
+    display: inline;
+}
+.menuDeNavegacao ul li a{
+    padding: 11px 10px;
+    display: inline-block;
+  text-decoration: none;
+  color: white;
+}
+.miniBorda{
+    display: flex;
+    margin-top: 15px;
+    height: 13px;
+    border-right: 2px solid #fafafa;
+}
+.bemvindo{
+    margin-top: 13%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.containerVersao{
+    background-color: #fafafa;
+    color: rgb(82, 82, 82);
+    font-size: 9px;
+    font-family: S;
+    padding: 3px 10px;
+    margin-top: 150px;
+    border-radius: 30px;
+    font-weight: bold;
+    font-family: 'Secular One', sans-serif;
+}
+#versao{
+    color: #6791DB;
+    font-family: "Formula of Love";
+}
 /*CORPO DO SITE TWICE APP*/
 
 footer{
@@ -170,7 +170,7 @@ footer a{
     font-weight: bold;
 }
 
-footer div{
+.containerFooter{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -195,7 +195,7 @@ footer p {
     background-color: rgb(29, 29, 29);
     color: #fafafa;
 }
-footer span{
+#jyp{
     color: dodgerblue;
     font-weight: bold;
 }
@@ -251,7 +251,7 @@ footer span{
     margin: 30px 0;
     font-size: 20px;
 }
-.desenvolvedores div{
+.desenvolvedores section{
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
@@ -294,36 +294,7 @@ footer span{
     margin-left: auto;
     margin-right: auto;
 }
-.menuDeNavegacao{
-    display: flex;
-    margin: 10px 0;
-    width: 70%;
-    font-family: 'Secular One', sans-serif;
-}
-.menuDeNavegacao ul{
-    display: flex;
-    background-color: #6791DB;
-    height: 45px;
-    width: 100%;
-    justify-content:center;
-    flex-wrap: wrap;
-    border-radius: 40px;
-}
-.menuDeNavegacao ul li{
-    display: inline;
-    border-right: 2px solid #fafafa;
-}
-.menuDeNavegacao ul li a{
-  padding: 11px 10px;
-  display: inline-block;
-  text-decoration: none;
-  color: white;
-}
-.menuDeNavegacao ul li a:hover{
-    background-color: #fafafa;
-    color: #6791DB;
-    transition: 0.4s;
-}
+
 /*Vídeo Mv*/
 .videoDoMv{
     width: 100%;
